--- a/assets/style.css
+++ b/assets/style.css
@@ -56,8 +56,7 @@ input {
 
 /* CAMPUSES */
 
-#campusesPageContainer,
-.campus a {
+#campusesPageContainer {
   display: flex;
   text-align: center;
   justify-content: space-around;
@@ -74,10 +73,13 @@ input {
 .campus a {
   display: flex;
   flex-direction: column;
-  align-content: center;
   margin: 10px;
   border: 2px black solid;
   width: 400px;
+}
+
+.campus {
+  margin-bottom: 50px;
 }
 
 #campusTitle {
@@ -92,7 +94,7 @@ input {
   grid-template-columns: auto auto;
 }
 
-.campus:hover #campusTitle {
+.campus a:hover #campusTitle {
   background-color: #660000;
 }
 
@@ -115,6 +117,8 @@ input {
 #studentContainer {
   display: flex;
   flex-direction: column;
+  align-items: center;
+  text-align: center;
 }
 
 a {
@@ -157,4 +161,23 @@ a {
   border: 2px black solid;
   margin: 5px;
   position: relative;
+}
+
+.studentWithButton {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 40px;
+}
+
+#studentCreate {
+  display: flex;
+  flex-direction: column;
+  border: 2px solid black;
+  padding: 5px;
+}
+
+#studentCreate div {
+  display: flex;
+  /* justify-content: space-evenly; */
+  align-items: center;
 }
