--- a/assets/style.css
+++ b/assets/style.css
@@ -2,11 +2,17 @@
   font-family: 'Trebuchet MS';
   box-sizing: border-box;
 }
+html,
+body,
+#main {
+  min-height: 100vh;
+  margin: 0;
+}
 
 nav {
   display: flex;
   justify-content: center;
-  background-color: #990000;
+  background-color: #a02222;
   font-size: 30px;
 }
 
@@ -20,9 +26,8 @@ nav a {
   display: flex;
   color: white;
   text-decoration: none;
-  padding: 20px;
+  padding: 30px;
   align-items: center;
-  height: 100%;
 }
 
 h2 {
@@ -30,19 +35,20 @@ h2 {
 }
 
 nav a:hover {
-  background-color: #660000;
+  background-color: #801c1c;
 }
 
 button {
   margin: 5px;
   padding: 10px;
-  background-color: #990000;
-  border: solid black 1px;
+  background-color: #a02222;
   color: white;
+  border-radius: 10px;
+  border: none;
 }
 
 button:hover {
-  background-color: #660000;
+  background-color: #801c1c;
 }
 
 input {
@@ -51,7 +57,11 @@ input {
 }
 
 #snuniversityNav {
-  font-size: 60px;
+  font-size: 40px;
+}
+
+.navLink {
+  font-size: 20px;
 }
 
 /* CAMPUSES */
@@ -76,6 +86,7 @@ input {
   margin: 10px;
   border: 2px black solid;
   width: 400px;
+  border-radius: 10px;
 }
 
 .campus {
@@ -83,10 +94,11 @@ input {
 }
 
 #campusTitle {
-  background-color: #990000;
+  background-color: #a02222;
   color: white;
   padding: 20px;
   margin: 0;
+  border-radius: 8px 8px 0 0;
 }
 
 #campusesContainer {
@@ -95,7 +107,7 @@ input {
 }
 
 .campus a:hover #campusTitle {
-  background-color: #660000;
+  background-color: #801c1c;
 }
 
 #campusCreate {
@@ -111,7 +123,7 @@ input {
 #students {
   align-self: center;
   display: inline-grid;
-  grid-template-columns: 200px 200px 200px 200px 200px;
+  grid-template-columns: 220px 220px 220px 220px 202px;
 }
 
 #studentContainer {
@@ -128,7 +140,7 @@ a {
 
 .student a:hover #studentOverlay {
   opacity: 1;
-  background-color: #990000;
+  background-color: #a02222;
 }
 .student #studentOverlay {
   position: absolute;
@@ -148,6 +160,7 @@ a {
   right: 0;
   color: white;
   font-size: 100px;
+  border-radius: 8px;
 }
 
 .student a {
@@ -157,16 +170,18 @@ a {
 .student {
   display: flex;
   flex-direction: column;
-  padding: 20px;
+  padding: 11px;
   border: 2px black solid;
   margin: 5px;
   position: relative;
+  border-radius: 10px;
 }
 
 .studentWithButton {
   display: flex;
   flex-direction: column;
-  margin-bottom: 40px;
+  margin-bottom: 30px;
+  margin-top: 10px;
 }
 
 #studentCreate {
@@ -174,10 +189,276 @@ a {
   flex-direction: column;
   border: 2px solid black;
   padding: 5px;
+  width: 30%;
+  justify-content: space-around;
 }
 
 #studentCreate div {
   display: flex;
-  /* justify-content: space-evenly; */
+  font-size: small;
+  color: rgb(190, 190, 190);
+}
+
+#studentCreate label {
+  text-align: right;
+  clear: both;
+  float: left;
+}
+
+#studentCreate input,
+#studentCreate select {
+  position: relative;
+  border: none;
+  border-bottom: 1px solid black;
+  width: 90%;
+  margin: 2px;
+}
+
+#studentCreate input:focus,
+#studentCreate select:focus {
+  border: none;
+  border-bottom: 1px solid black;
+  outline: none;
+}
+
+/* SINGLE STUDENT */
+
+#singleStudentContainer {
+  display: flex;
+  flex-direction: column;
   align-items: center;
+}
+
+#singleStudent {
+  width: 25%;
+  margin: 20px;
+  padding: 10px;
+  text-align: center;
+  border: 2px #a03131 solid;
+  border-radius: 10px;
+  box-shadow: 5px 5px #aaaaaa;
+}
+
+#singleStudent img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  height: 125px;
+  width: 125px;
+  border-radius: 50%;
+  border: 5px solid #a02222;
+  padding: 2px;
+}
+
+.label {
+  color: rgb(190, 190, 190);
+  font-size: small;
+}
+
+#singleStudent a:hover {
+  color: #801c1c;
+}
+
+#singleStudent a {
+  padding: 2px;
+  text-decoration: underline;
+  color: #a02222;
+}
+
+#studentUpdate {
+  display: flex;
+  flex-direction: column;
+  border: 2px solid #a02222;
+  padding: 5px;
+  align-content: center;
+}
+
+#studentUpdate button {
+  border-radius: 10px;
+  border: none;
+}
+
+/* SINGLE CAMPUS */
+
+#singleCampusContainer {
+  display: flex;
+  justify-content: center;
+}
+
+.singleCampusView {
+  display: flex;
+  flex-direction: column;
+  border: 2px solid #a02222;
+  width: 35%;
+  align-items: center;
+  /* padding: 10px; */
+  margin: 20px;
+  border-radius: 10px;
+}
+
+.singleCampusView > p {
+  padding: 10px;
+}
+
+#campusUpdate {
+  display: flex;
+  flex-direction: column;
+  border: 1px solid #aaaaaa;
+  padding: 10px;
+  margin: 20px;
+  width: 90%;
+}
+
+#campusUpdate * {
+  margin: 5px;
+}
+
+.singleCampusView img {
+  width: 100%;
+  padding: 0;
+  border-radius: 8px 8px 0 0;
+  margin-bottom: -20px;
+}
+
+.singleCampusView button {
+  margin-bottom: 20px;
+}
+
+.singleCampusView h2 {
+  background-color: #a02222;
+  color: white;
+  padding: 10px;
+  margin: 0;
+}
+
+#campusStudents {
+  display: inline-grid;
+  grid-template-columns: auto auto;
+}
+
+#campusStudents * {
+  margin: 0;
+  padding: 4px;
+}
+
+#campusStudents button {
+  margin-bottom: 10px;
+}
+
+#campusStudents a {
+  padding: 2px;
+  text-decoration: underline;
+  color: #a02222;
+}
+
+#campusStudents a:hover {
+  color: #801c1c;
+}
+
+#allStudentsSelect,
+#allCampusSelect {
+  display: flex;
+  justify-content: space-evenly;
+  /* margin-top: 10px; */
+  margin: 20px 0 0 0;
+  width: 60%;
+  font-size: small;
+  font-weight: bolder;
+  color: rgb(190, 190, 190);
+}
+
+#allStudentsSelect select,
+#allCampusSelect select {
+  margin: 10px;
+  border: 0;
+  outline: none;
+}
+
+#pages {
+  display: flex;
+}
+
+.page {
+  font-size: small;
+  margin: 5px;
+}
+
+.page:hover {
+  color: #801c1c;
+}
+
+#schoolHome {
+  display: flex;
+  overflow: hidden;
+  height: 520px;
+}
+
+.homeImg {
+  width: 33.3%;
+  position: relative;
+  /* transition: 0.4s; */
+}
+
+.homeImg:hover .homeOverlay {
+  background: linear-gradient(
+    0deg,
+    rgba(0, 0, 0, 0.2) 24%,
+    rgba(160, 34, 34, 1) 100%
+  );
+  position: absolute;
+  opacity: 1;
+  display: block;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  padding: 100px;
+  transition: 0.4s;
+}
+
+.homeOverlay {
+  padding: 100px;
+  color: white;
+  position: absolute;
+  opacity: 0;
+  display: block;
+  width: 100%;
+  height: 100%;
+  /* transition: 0.4s; */
+}
+
+.homeExpanded {
+  font-size: small;
+}
+
+/* #bottomBorder {
+  width: 100%;
+  background-color: #a02222;
+  height: 30px;
+} */
+
+#homeContainer {
+  display: flex;
+  flex-direction: column;
+}
+
+#address {
+  display: flex;
+  justify-content: space-between;
+  background-color: #a02222;
+  color: white;
+  padding: 35px;
+  width: 100%;
+  align-items: center;
+  position: fixed;
+  bottom: 0;
+  height: 70px;
+}
+
+#main {
+  position: relative;
+  min-height: 100vh;
+}
+
+#wrapper {
+  padding-bottom: 70px;
 }
