--- a/assets/style.css
+++ b/assets/style.css
@@ -402,7 +402,7 @@ a {
 .homeImg:hover .homeOverlay {
   background: linear-gradient(
     0deg,
-    rgba(0, 0, 0, 0.2) 24%,
+    rgba(0, 0, 0, 0.356) 24%,
     rgba(160, 34, 34, 1) 100%
   );
   position: absolute;
@@ -424,6 +424,20 @@ a {
   width: 100%;
   height: 100%;
   /* transition: 0.4s; */
+}
+
+.homeOverlay h2 {
+  text-align: left;
+  /* padding: 30px; */
+  padding-bottom: 8px;
+  border-bottom: 1px white solid;
+  width: 55%;
+}
+
+.homeOverlay p {
+  text-align: left;
+  /* padding: 30px; */
+  margin: 0;
 }
 
 .homeExpanded {
@@ -461,4 +475,20 @@ a {
 
 #wrapper {
   padding-bottom: 70px;
+}
+
+#search {
+  border-bottom: 1px solid black;
+}
+
+#search input {
+  outline: none;
+  border: none;
+}
+
+#searchSubmit:hover,
+#filterSubmit:hover,
+#sortSubmit:hover {
+  color: #801c1c;
+  cursor: curser;
 }
