--- a/assets/style.css
+++ b/assets/style.css
@@ -185,6 +185,10 @@ a {
   margin-top: 10px;
 }
 
+div#studentCreateRequired {
+  color: black;
+}
+
 #studentCreate {
   display: flex;
   flex-direction: column;
@@ -197,7 +201,6 @@ a {
 #studentCreate div {
   display: flex;
   font-size: small;
-  color: rgb(190, 190, 190);
 }
 
 #studentCreate label {
@@ -231,9 +234,9 @@ a {
 }
 
 #singleStudent {
-  width: 25%;
-  margin: 20px;
-  padding: 10px;
+  width: 20%;
+  margin: 10px;
+  padding: 8px;
   text-align: center;
   border: 2px #a03131 solid;
   border-radius: 10px;
@@ -249,6 +252,10 @@ a {
   border-radius: 50%;
   border: 5px solid #a02222;
   padding: 2px;
+}
+
+.studentDetail {
+  margin: 15px;
 }
 
 .label {
