--- a/assets/style.css
+++ b/assets/style.css
@@ -1,3 +1,5 @@
+/* GLOBAL */
+
 * {
   font-family: 'Trebuchet MS';
   box-sizing: border-box;
@@ -10,6 +12,15 @@ body,
   margin: 0;
 }
 
+#main {
+  position: relative;
+  min-height: 100vh;
+}
+
+#wrapper {
+  padding-bottom: 70px;
+}
+
 nav {
   display: flex;
   justify-content: center;
@@ -20,8 +31,6 @@ nav {
 #nav {
   display: flex;
 }
-
-/* GLOBAL */
 
 nav a {
   display: flex;
@@ -77,7 +86,6 @@ textarea {
 #campusesPageContainer {
   display: flex;
   text-align: center;
-  /* justify-content: space-around; */
   align-content: space-around;
   flex-direction: column;
 }
@@ -383,7 +391,6 @@ div#studentCreateRequired {
 #allCampusSelect {
   display: flex;
   justify-content: space-evenly;
-  /* margin-top: 10px; */
   margin: 20px 0 0 0;
   width: 90%;
   font-size: small;
@@ -431,6 +438,8 @@ div#studentCreateRequired {
   color: #801c1c;
 }
 
+/* HOME PAGE */
+
 #schoolHome {
   display: flex;
   overflow: hidden;
@@ -440,7 +449,6 @@ div#studentCreateRequired {
 .homeImg {
   width: 33.3%;
   position: relative;
-  /* transition: 0.4s; */
 }
 
 .homeImg:hover .homeOverlay {
@@ -467,12 +475,10 @@ div#studentCreateRequired {
   display: block;
   width: 100%;
   height: 100%;
-  /* transition: 0.4s; */
 }
 
 .homeOverlay h2 {
   text-align: left;
-  /* padding: 30px; */
   padding-bottom: 8px;
   border-bottom: 1px white solid;
   width: 55%;
@@ -480,19 +486,12 @@ div#studentCreateRequired {
 
 .homeOverlay p {
   text-align: left;
-  /* padding: 30px; */
   margin: 0;
 }
 
 .homeExpanded {
   font-size: small;
 }
-
-/* #bottomBorder {
-  width: 100%;
-  background-color: #a02222;
-  height: 30px;
-} */
 
 #homeContainer {
   display: flex;
@@ -512,14 +511,7 @@ div#studentCreateRequired {
   height: 70px;
 }
 
-#main {
-  position: relative;
-  min-height: 100vh;
-}
-
-#wrapper {
-  padding-bottom: 70px;
-}
+/* STUDENT FILTER AND SORT AND SEARCH */
 
 #search {
   border-bottom: 1px solid black;
@@ -536,11 +528,14 @@ div#studentCreateRequired {
   color: #801c1c;
   cursor: text;
 }
+
+/* ITEMS PER PAGE */
+
 #viewNum {
   display: flex;
 }
 
-#pagesView span:hover {
+.viewOption:hover {
   color: rgba(160, 34, 34, 1);
   cursor: default;
 }
@@ -554,7 +549,13 @@ div#studentCreateRequired {
   margin-right: 20px;
 }
 
+.current {
+  color: #a02222;
+  border-bottom: 1px solid #a02222;
+}
+
 /* LOADER */
+
 #loading {
   width: 400px;
   text-align: center;
@@ -565,9 +566,4 @@ div#studentCreateRequired {
   font-weight: bolder;
   font-size: x-large;
   letter-spacing: 0.8em;
-}
-
-.current {
-  color: #a02222;
-  border-bottom: 1px solid #a02222;
 }
